# tameshk-discord-bot

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
bot/: main.py  managing_and_fun.py
config-files/: swear-words.json
