[tool.poetry]
name = "repl_python3_Tameshk"
version = "0.1.0"
description = ""
authors = ["Hadi Azarnasab <hazard7546@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.2"
discord = "^1.7.3"
pyautogui = "^0.9.53"
Khayyam = "^3.0.17"
googletrans = "^4.0.0-rc1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
