[tool.poetry]
name = "repl_python3_Tameshk"
version = "2"
description = ""
authors = ["Hadi Azarnasab <hazard7546@gmail.com>","Nima Ghasemi Por <ngsgfa2@gmail.com>]

[tool.poetry.dependencies]
python 
flask 
py-cord 
pyautogui 
Khayyam 
googletrans 

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
